--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@angular/cli": "~15.2.8",
     "@angular/compiler-cli": "^15.2.9",
     "@angular/localize": "^15.2.9",
+    "@fortawesome/fontawesome-free": "^6.4.0",
     "@types/jasmine": "~4.3.0",
     "jasmine-core": "~4.6.0",
     "karma": "~6.4.0",
